mpegts: always reset pes packet state on new packet

Fixes ticket #3584.

Signed-off-by: Marton Balint <cus@passwd.hu>